update readme figures

--- a/src/test_demos/Doc_Readme.ipynb
+++ b/src/test_demos/Doc_Readme.ipynb
@@ -24,48 +24,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Demos are provided to help users get familiar with `PyUPPAAL`:\n",
-    "<div style=\"display: flex; flex-wrap: wrap; align-items: flex-start;\">\n",
-    "    <div style=\"margin: 10px; width: 300px;\">\n",
-    "        <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/pipeNetPatterns.png\" style=\"width: 100%; height: 200px; object-fit: cover;\">\n",
-    "        <h5 style=\"margin: 0 0 4px 0; font-size: 14px;\"><a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo1-PipeNet.ipynb\">Demo-PipeNet</a></h5>\n",
-    "        <p style=\"margin: 0; font-size: 14px;\">This demo demonstrates how to</p>\n",
-    "        <ol style=\"margin: 0; padding-left: 20px; font-size: 14px;\">\n",
-    "            <li>Load and verify a model.</li>\n",
-    "            <li>Model the input & observation sequence.</li>\n",
-    "            <li>Build communication graph.</li>\n",
-    "            <li>Find all patterns.</li>\n",
-    "        </ol>\n",
-    "    </div>\n",
-    "    <div style=\"margin: 10px; width: 300px;\">\n",
-    "        <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_receiver.png\" style=\"width: 100%; height: 200px; object-fit: cover;\" alt=\"描述2\">\n",
-    "        <h5 style=\"margin: 0 0 4px 0; font-size: 14px;\"><a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo4-Scripted%20Model%20Construction.ipynb\">Demo-Scripted Model Construction</a></h5>\n",
-    "        <p style=\"margin: 0; font-size: 14px;\">This demo constructs a model solely with PyUPPAAL APIs, including:</p>\n",
-    "        <ol style=\"margin: 0; padding-left: 20px; font-size: 14px;\">\n",
-    "            <li>Construct <code>Template</code> with <code>Edge</code>, <code>Location</code>.</li>\n",
-    "            <li>Set <code>Declarations</code>, <code>Systems</code>, <code>Queries</code>.</li>\n",
-    "            <li>Verify the constructed model.</li>\n",
-    "        </ol>\n",
-    "    </div>\n",
-    "    <div style=\"margin: 10px; width: 300px;\">\n",
-    "        <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/pedestrian_overall.png\" style=\"width: 100%; height: 200px; object-fit: cover;\" alt=\"描述3\">\n",
-    "        <h5 style=\"margin: 0 0 4px 0; font-size: 14px;\"><a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo2-Pedestrian.ipynb\">Demo-Pedestrain</a></h5>\n",
-    "        <p style=\"margin: 0; font-size: 14px;\">This demo shows how to identify all event sequences that could result in a fault state, and see you can get ALL possible patterns only with PyUPPAAL <code>find_all_patterns()</code>.</p>\n",
-    "    </div>\n",
-    "    <div style=\"margin: 10px; width: 300px;\">\n",
-    "        <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/npn_monitors.png\" style=\"width: 100%; height: 200px; object-fit: cover;\" alt=\"描述3\">\n",
-    "        <h5 style=\"margin: 0 0 4px 0; font-size: 14px;\"><a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo5-Trace%20Parser.ipynb\">Demo-Trace Parser</a></h5>\n",
-    "        <p style=\"margin: 0; font-size: 14px; font-size: 14px;\">In this demo, you will learn how to model the <code>input</code> and <code>observations</code> events of a descrete event system (DES), and how to extract information from parsed counter example.</p>\n",
-    "    </div>\n",
-    "    <div style=\"margin: 10px; width: 300px;\">\n",
-    "        <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/diagnosis_identification.png\" style=\"width: 100%; height: 200px; object-fit: cover;\" alt=\"描述3\">\n",
-    "        <h5 style=\"margin: 0 0 4px 0; font-size: 14px;\"><a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo3-Fault%20Diagnosis.ipynb\">Demo-Fault Identification and Diagnosability</a></h5>\n",
-    "        <p style=\"margin: 0; font-size: 14px;\">In this demo, you will analyze the identification and diagnosability of certain fault, wich advanced methods of <code>pyuppaal</code>.</p>\n",
-    "    </div>\n",
-    "</div>\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -246,9 +205,60 @@
     "\n",
     "An example communication graph of a complex model in [Demo_PipeNet](https://pyuppaal.readthedocs.io/en/latest/Demo1-PipeNet.html#visualize-the-architecture) is shown below:\n",
     "\n",
-    "\n",
     "[![](https://mermaid.ink/img/pako:eNpVjs0KwjAQhF-l7Lk56DEHT714UUGPC7JttjaQpCHdiFL67kYo_pxmmG8GZoZuNAwaboniUF0aDCcb-cCCYR9iLnJsJ053TmuglH3LtSXnlNp92qtRih9WtoV8d39o84OgBs_JkzXlwYyhqhBkYM8IuljDPWUnCBiWUqUs4_kZOtCSMteQoyHhxlL57kH35CZeXq-ESg8?type=jpg)](https://mermaid.live/edit#pako:eNpVjs0KwjAQhF-l7Lk56DEHT714UUGPC7JttjaQpCHdiFL67kYo_pxmmG8GZoZuNAwaboniUF0aDCcb-cCCYR9iLnJsJ053TmuglH3LtSXnlNp92qtRih9WtoV8d39o84OgBs_JkzXlwYyhqhBkYM8IuljDPWUnCBiWUqUs4_kZOtCSMteQoyHhxlL57kH35CZeXq-ESg8)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Backup of old docs\n",
+    "\n",
+    "Demos are provided to help users get familiar with `PyUPPAAL` (can not be rendered by github):\n",
+    "<div style=\"display: flex; flex-wrap: wrap; align-items: flex-start;\">\n",
+    "    <div style=\"margin: 10px; width: 300px;\">\n",
+    "        <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/pipeNetPatterns.png\" style=\"width: 300px; height: 200px; object-fit: cover;\">\n",
+    "        <h5 style=\"margin: 0 0 4px 0; font-size: 14px;\"><a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo1-PipeNet.ipynb\">Demo-PipeNet</a></h5>\n",
+    "        <p style=\"margin: 0; font-size: 14px;\">This demo demonstrates how to</p>\n",
+    "        <ol style=\"margin: 0; padding-left: 20px; font-size: 14px;\">\n",
+    "            <li>Load and verify a model.</li>\n",
+    "            <li>Model the input & observation sequence.</li>\n",
+    "            <li>Build communication graph.</li>\n",
+    "            <li>Find all patterns.</li>\n",
+    "        </ol>\n",
+    "    </div>\n",
+    "    <div style=\"margin: 10px; width: 300px;\">\n",
+    "        <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_receiver.png\" style=\"width: 300px; height: 200px; object-fit: cover;\" alt=\"描述2\">\n",
+    "        <h5 style=\"margin: 0 0 4px 0; font-size: 14px;\"><a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo4-Scripted%20Model%20Construction.ipynb\">Demo-Scripted Model Construction</a></h5>\n",
+    "        <p style=\"margin: 0; font-size: 14px;\">This demo constructs a model solely with PyUPPAAL APIs, including:</p>\n",
+    "        <ol style=\"margin: 0; padding-left: 20px; font-size: 14px;\">\n",
+    "            <li>Construct <code>Template</code> with <code>Edge</code>, <code>Location</code>.</li>\n",
+    "            <li>Set <code>Declarations</code>, <code>Systems</code>, <code>Queries</code>.</li>\n",
+    "            <li>Verify the constructed model.</li>\n",
+    "        </ol>\n",
+    "    </div>\n",
+    "    <div style=\"margin: 10px; width: 300px;\">\n",
+    "        <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/pedestrian_overall.png\" style=\"width: 300px; height: 200px; object-fit: cover;\" alt=\"描述3\">\n",
+    "        <h5 style=\"margin: 0 0 4px 0; font-size: 14px;\"><a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo2-Pedestrian.ipynb\">Demo-Pedestrain</a></h5>\n",
+    "        <p style=\"margin: 0; font-size: 14px;\">This demo shows how to identify all event sequences that could result in a fault state, and see you can get ALL possible patterns only with PyUPPAAL <code>find_all_patterns()</code>.</p>\n",
+    "    </div>\n",
+    "    <div style=\"margin: 10px; width: 300px;\">\n",
+    "        <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/npn_monitors.png\" style=\"width: 300px; height: 200px; object-fit: cover;\" alt=\"描述3\">\n",
+    "        <h5 style=\"margin: 0 0 4px 0; font-size: 14px;\"><a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo5-Trace%20Parser.ipynb\">Demo-Trace Parser</a></h5>\n",
+    "        <p style=\"margin: 0; font-size: 14px; font-size: 14px;\">In this demo, you will learn how to model the <code>input</code> and <code>observations</code> events of a descrete event system (DES), and how to extract information from parsed counter example.</p>\n",
+    "    </div>\n",
+    "    <div style=\"margin: 10px; width: 300px;\">\n",
+    "        <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/diagnosis_identification.png\" style=\"width: 300px; height: 200px; object-fit: cover;\" alt=\"描述3\">\n",
+    "        <h5 style=\"margin: 0 0 4px 0; font-size: 14px;\"><a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo3-Fault%20Diagnosis.ipynb\">Demo-Fault Identification and Diagnosability</a></h5>\n",
+    "        <p style=\"margin: 0; font-size: 14px;\">In this demo, you will analyze the identification and diagnosability of certain fault, wich advanced methods of <code>pyuppaal</code>.</p>\n",
+    "    </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
