--- a/src/test_demos/Doc_Readme.ipynb
+++ b/src/test_demos/Doc_Readme.ipynb
@@ -24,7 +24,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo1-PipeNet.ipynb\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme1.jpg\" width=\"300px\" alt=\"\">\n",
+    "</a>\n",
+    "<a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo4-Scripted%20Model%20Construction.ipynb\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme2.jpg\" width=\"300px\" alt=\"\">\n",
+    "</a>\n",
+    "<a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo2-Pedestrian.ipynb\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme3.jpg\" width=\"300px\" alt=\"\">\n",
+    "</a>\n",
+    "<a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo5-Trace%20Parser.ipynb\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme4.jpg\" width=\"300px\" alt=\"\">\n",
+    "</a>\n",
+    "<a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo3-Fault%20Diagnosis.ipynb\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme5.jpg\" width=\"300px\" alt=\"\">\n",
+    "</a>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,46 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pyuppaal version: 1.2.1\n",
-      "\n",
-      "======== terminal res ========\n",
-      "Writing example trace to demo-1.xtr\n",
-      "Options for the verification:\n",
-      "  Generating shortest trace\n",
-      "  Search order is breadth first\n",
-      "  Using conservative space optimisation\n",
-      "  Seed is 1713320425\n",
-      "  State space representation uses minimal constraint systems\n",
-      "\u001b[2K\n",
-      "Verifying formula 1 at /nta/queries/query[1]/formula\n",
-      "\u001b[2K -- Formula is satisfied.\n",
-      "\n",
-      "======== parsed res ========\n",
-      "untime pattern: ['a', 'b']\n",
-      "full trace: State [0]: ['P1.start']\n",
-      "global_variables [0]: None\n",
-      "Clock_constraints [0]: [t(0) - P1.t ≤ 0; P1.t - t(0) ≤ 10; ]\n",
-      "transitions [0]: a: P1 -> ; P1.start -> P1._id2;\n",
-      "-----------------------------------\n",
-      "State [1]: ['P1._id2']\n",
-      "global_variables [1]: None\n",
-      "Clock_constraints [1]: [t(0) - P1.t ≤ -10; ]\n",
-      "transitions [1]: b: P1 -> ; P1._id2 -> P1.pass;\n",
-      "-----------------------------------\n",
-      "State [2]: ['P1.pass']\n",
-      "global_variables [2]: None\n",
-      "Clock_constraints [2]: [t(0) - P1.t ≤ -10; ]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pyuppaal\n",
     "from pyuppaal import UModel\n",
@@ -131,18 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pattern1:  ['a', 'b']\n",
-      "pattern2:  ['c', 'd']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i, st in enumerate(umodel.find_all_patterns()):\n",
     "    print(f'pattern{i+1}: ', st.untime_pattern)"
@@ -157,19 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.2.1\n",
-      "Verify with for loop, time usage 8.181004762649536\n",
-      "Verify with multi-threads, time usage 1.4765398502349854\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pyuppaal as pyu\n",
     "import time\n",
@@ -254,11 +214,6 @@
     "    </div>\n",
     "</div>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
