--- a/src/test_demos/Doc_Readme.ipynb
+++ b/src/test_demos/Doc_Readme.ipynb
@@ -25,6 +25,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Demos are provided to help users get familiar with `PyUPPAAL`\n",
+    "\n",
     "<a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo1-PipeNet.ipynb\">\n",
     "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme1.jpg\" width=\"270px\" alt=\"\">\n",
     "</a>\n",
@@ -214,6 +216,11 @@
     "    </div>\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
