update model construction

--- a/src/test_demos/Demo4-Scripted Model Construction.ipynb
+++ b/src/test_demos/Demo4-Scripted Model Construction.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Demo4 - Scripted Model Construction\n",
     "\n",
-    "This demo illustrates the usage of sripted model consturction of pyuppaal, constructing the [model](https://github.com/Jack0Chan/pyuppaal/blob/main/src/test_unit/constructed_model.xml) shown below:\n",
+    "This demo illustrates the usage of sripted model consturction of pyuppaal, constructing the [model](https://github.com/Jack0Chan/pyuppaal/blob/main/src/test_unit/constructed_model1.xml) shown below:\n",
     "\n",
     "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building.png width=800 />"
    ]
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = 'constructed_model.xml'\n",
+    "model_path = 'constructed_model1.xml'\n",
     "os.remove(model_path)\n",
     "umodel = pyuppaal.UModel.new(model_path)\n",
     "\n",
@@ -237,15 +237,15 @@
      "output_type": "stream",
      "text": [
       "umodel.verify() results: \n",
-      "Writing example trace to constructed_model-2.xtr\n",
-      "Writing example trace to constructed_model-3.xtr\n",
-      "Writing example trace to constructed_model-4.xtr\n",
-      "Writing counter example to constructed_model-5.xtr\n",
+      "Writing example trace to constructed_model1-2.xtr\n",
+      "Writing example trace to constructed_model1-3.xtr\n",
+      "Writing example trace to constructed_model1-4.xtr\n",
+      "Writing counter example to constructed_model1-5.xtr\n",
       "Options for the verification:\n",
       "  Generating shortest trace\n",
       "  Search order is breadth first\n",
       "  Using conservative space optimisation\n",
-      "  Seed is 1713259465\n",
+      "  Seed is 1713421808\n",
       "  State space representation uses minimal constraint systems\n",
       "\u001b[2K\n",
       "Verifying formula 1 at /nta/queries/query[1]/formula\n",
