--- a/src/test_demos/Doc_Readme.ipynb
+++ b/src/test_demos/Doc_Readme.ipynb
@@ -76,9 +76,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pyuppaal version: 1.2.1\n",
+      "\n",
+      "======== terminal res ========\n",
+      "Writing example trace to demo-1.xtr\n",
+      "Options for the verification:\n",
+      "  Generating shortest trace\n",
+      "  Search order is breadth first\n",
+      "  Using conservative space optimisation\n",
+      "  Seed is 1713425560\n",
+      "  State space representation uses minimal constraint systems\n",
+      "\u001b[2K\n",
+      "Verifying formula 1 at /nta/queries/query[1]/formula\n",
+      "\u001b[2K -- Formula is satisfied.\n",
+      "\n",
+      "======== parsed res ========\n",
+      "untime pattern: ['a', 'b']\n",
+      "full trace: State [0]: ['P1.start']\n",
+      "global_variables [0]: None\n",
+      "Clock_constraints [0]: [t(0) - P1.t ≤ 0; P1.t - t(0) ≤ 10; ]\n",
+      "transitions [0]: a: P1 -> ; P1.start -> P1._id2;\n",
+      "-----------------------------------\n",
+      "State [1]: ['P1._id2']\n",
+      "global_variables [1]: None\n",
+      "Clock_constraints [1]: [t(0) - P1.t ≤ -10; ]\n",
+      "transitions [1]: b: P1 -> ; P1._id2 -> P1.pass;\n",
+      "-----------------------------------\n",
+      "State [2]: ['P1.pass']\n",
+      "global_variables [2]: None\n",
+      "Clock_constraints [2]: [t(0) - P1.t ≤ -10; ]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import pyuppaal\n",
     "from pyuppaal import UModel\n",
@@ -112,9 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pattern1:  ['a', 'b']\n",
+      "pattern2:  ['c', 'd']\n"
+     ]
+    }
+   ],
    "source": [
     "for i, st in enumerate(umodel.find_all_patterns()):\n",
     "    print(f'pattern{i+1}: ', st.untime_pattern)"
@@ -129,9 +175,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.1\n",
+      "Verify with for loop, time usage 9.384526014328003\n",
+      "Verify with multi-threads, time usage 1.61281418800354\n"
+     ]
+    }
+   ],
    "source": [
     "import pyuppaal as pyu\n",
     "import time\n",
