--- a/src/test_demos/Doc_Readme.ipynb
+++ b/src/test_demos/Doc_Readme.ipynb
@@ -25,22 +25,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Demos are provided to help users get familiar with `PyUPPAAL`\n",
+    "Demos are provided to help users get familiar with `PyUPPAAL`:\n",
     "\n",
-    "<a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo1-PipeNet.ipynb\">\n",
-    "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme1.jpg\" width=\"270px\" alt=\"\">\n",
+    "<a href=\"https://www.sciencedirect.com/science/article/abs/pii/S0957417424002367\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme1.png\" width=\"270px\" alt=\"\">\n",
+    "</a>\n",
+    "<a href=\"\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme2.png\" width=\"270px\" alt=\"\">\n",
     "</a>\n",
     "<a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo4-Scripted%20Model%20Construction.ipynb\">\n",
-    "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme2.jpg\" width=\"270px\" alt=\"\">\n",
-    "</a>\n",
-    "<a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo2-Pedestrian.ipynb\">\n",
-    "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme3.jpg\" width=\"270px\" alt=\"\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme3.png\" width=\"270px\" alt=\"\">\n",
     "</a>\n",
     "<a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo5-Trace%20Parser.ipynb\">\n",
-    "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme4.jpg\" width=\"270px\" alt=\"\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme4.png\" width=\"270px\" alt=\"\">\n",
+    "</a>\n",
+    "<a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo1-PipeNet.ipynb\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme5.png\" width=\"270px\" alt=\"\">\n",
+    "</a>\n",
+    "<a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo2-Pedestrian.ipynb\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme6.png\" width=\"270px\" alt=\"\">\n",
     "</a>\n",
     "<a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo3-Fault%20Diagnosis.ipynb\">\n",
-    "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme5.jpg\" width=\"270px\" alt=\"\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme7.png\" width=\"270px\" alt=\"\">\n",
     "</a>"
    ]
   },
