--- a/src/test_demos/Doc_Readme.ipynb
+++ b/src/test_demos/Doc_Readme.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "Demos are provided to help users get familiar with `PyUPPAAL`:\n",
     "\n",
-    "<a href=\"https://www.sciencedirect.com/science/article/abs/pii/S0957417424002367\">\n",
+    "<a href=\"\">\n",
     "    <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/readme1.png\" width=\"270px\" alt=\"\">\n",
     "</a>\n",
     "<a href=\"\">\n",
