--- a/src/test_demos/Doc_Readme.ipynb
+++ b/src/test_demos/Doc_Readme.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
       "  Generating shortest trace\n",
       "  Search order is breadth first\n",
       "  Using conservative space optimisation\n",
-      "  Seed is 1713425560\n",
+      "  Seed is 1715059335\n",
       "  State space representation uses minimal constraint systems\n",
       "\u001b[2K\n",
       "Verifying formula 1 at /nta/queries/query[1]/formula\n",
@@ -127,7 +127,8 @@
     "from pyuppaal import UModel\n",
     "\n",
     "print(f\"pyuppaal version: {pyuppaal.__version__}\\n\")\n",
-    "pyuppaal.set_verifyta_path(r\"C:\\Users\\10262\\Documents\\GitHub\\cav2024\\bin\\uppaal64-4.1.26\\bin-Windows\\verifyta.exe\")\n",
+    "# pyuppaal.set_verifyta_path(r\"C:\\Users\\10262\\Documents\\GitHub\\cav2024\\bin\\uppaal64-4.1.26\\bin-Windows\\verifyta.exe\")\n",
+    "pyuppaal.set_verifyta_path(r\"/Users/chenguangyao/Downloads/uppaal64-4.1.26/bin-Darwin/verifyta\")\n",
     "\n",
     "umodel = UModel('demo.xml') # load the model\n",
     "umodel.queries = ['E<> P1.pass']\n",
@@ -301,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.18"
   },
   "vscode": {
    "interpreter": {
