update demo with 5.0

--- a/src/test_demos/Demo4-Scripted Model Construction.ipynb
+++ b/src/test_demos/Demo4-Scripted Model Construction.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,8 @@
     "import pyuppaal\n",
     "from pyuppaal.nta import Template, Location, Edge\n",
     "\n",
-    "pyuppaal.set_verifyta_path(r\"C:\\Users\\10262\\Documents\\GitHub\\cav2024\\bin\\uppaal64-4.1.26\\bin-Windows\\verifyta.exe\")"
+    "# pyuppaal.set_verifyta_path(r\"C:\\Users\\10262\\Documents\\GitHub\\cav2024\\bin\\uppaal64-4.1.26\\bin-Windows\\verifyta.exe\")\n",
+    "pyuppaal.set_verifyta_path(r\"/Users/chenguangyao/Documents/GitHub/uppaal64-5.0.0/bin-Darwin/verifyta\")"
    ]
   },
   {
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -237,42 +238,54 @@
      "output_type": "stream",
      "text": [
       "umodel.verify() results: \n",
-      "Writing example trace to constructed_model1-2.xtr\n",
-      "Writing example trace to constructed_model1-3.xtr\n",
-      "Writing example trace to constructed_model1-4.xtr\n",
-      "Writing counter example to constructed_model1-5.xtr\n",
       "Options for the verification:\n",
       "  Generating shortest trace\n",
       "  Search order is breadth first\n",
       "  Using conservative space optimisation\n",
-      "  Seed is 1713421808\n",
-      "  State space representation uses minimal constraint systems\n",
+      "  Seed is 1715652637\n",
+      "  State space representation uses minimal constraint systems with future testing\n",
+      "  Using HashMap + Compress integers for discrete state storage\n",
       "\u001b[2K\n",
       "Verifying formula 1 at /nta/queries/query[1]/formula\n",
+      " -- Formula: E<> sender_count == 10\n",
       "\u001b[2K -- Formula is NOT satisfied.\n",
       "\u001b[2K\n",
       "Verifying formula 2 at /nta/queries/query[2]/formula\n",
+      " -- Formula: E<> count == 1\n",
       "\u001b[2K -- Formula is satisfied.\n",
+      " -- Writing witness trace to constructed_model1_xtr-2\n",
       "\u001b[2K\n",
       "Verifying formula 3 at /nta/queries/query[3]/formula\n",
+      " -- Formula: E<> rec.End1\n",
       "\u001b[2K -- Formula is satisfied.\n",
+      " -- Writing witness trace to constructed_model1_xtr-3\n",
       "\u001b[2K\n",
       "Verifying formula 4 at /nta/queries/query[4]/formula\n",
+      " -- Formula: E<> rec.t >= 10\n",
       "\u001b[2K -- Formula is satisfied.\n",
+      " -- Writing witness trace to constructed_model1_xtr-4\n",
       "\u001b[2K\n",
       "Verifying formula 5 at /nta/queries/query[5]/formula\n",
+      " -- Formula: A[] not deadlock\n",
       "\u001b[2K -- Formula is NOT satisfied.\n",
+      " -- Writing witness trace to constructed_model1_xtr-5\n",
       "\n",
       "umodel.easy_verify().untime_pattern: (easy_verify() will only return the trace of the FIRST query.)\n",
       "['E<> rec.End1']\n",
       "\n",
-      "State: rec.Start sender.Start count=0 sender_count=0 rec.inv_start=10 rec.guard_start=10 t(0)-rec.t<=0 rec.t-t(0)<=10 \n",
+      "State: rec.Start sender.Start count=0 sender_count=0 rec.inv_start=10 rec.guard_start=10 #t(0)-#time<=0 #t(0)-rec.t<=0 #time-#t(0)<=10 #time-rec.t<=0 rec.t-#time<=0 \n",
       "\n",
       "Transition: rec._id2 -> rec.End2 {1; param2?; t = 888;} \n",
       "\n",
-      "State: rec._id1 sender.Start count=1 sender_count=0 rec.inv_start=10 rec.guard_start=10 t(0)-rec.t<=-10 rec.t-t(0)<=200 \n",
+      "State: rec._id1 sender.Start count=1 sender_count=0 rec.inv_start=10 rec.guard_start=10 #t(0)-#time<=-10 #t(0)-rec.t<=0 #time-#t(0)<=200 #time-rec.t<=0 rec.t-#time<=0 \n",
       "\n",
       "Transition: rec._id1 -> rec._id3 {1; 0; 1, 1;} rec.Start -> rec._id1 {t >= guard_start; 0; count++;} \n",
+      "\n",
+      "State: rec._id3 sender.Start count=1 sender_count=0 rec.inv_start=10 rec.guard_start=10 #t(0)-#time<=-10 #t(0)-rec.t<=0 #time-#t(0)<=200 #time-rec.t<=0 rec.t-#time<=0 \n",
+      "\n",
+      "Transition: sender.Start -> sender._id8 {1; param1!; 1, 1;} sender._id2 -> sender.End2 {1; param2?; t = 888;} rec._id3 -> rec.End1 {1; param1?; t = 999;} \n",
+      "\n",
+      "State: rec.End1 sender._id8 count=1 sender_count=0 rec.inv_start=10 rec.guard_start=10 #t(0)-#time<=0 #t(0)-rec.t<=-999 #time-rec.t<=-799 rec.t-#time<=989 \n",
       "\n"
      ]
     }
@@ -289,7 +302,8 @@
     "st = tmp_new_model.easy_verify(keep_tmp_file=True).raw\n",
     "print(st)\n",
     "# assert last state of st is rec.End1\n",
-    "# os.remove('tmp_new.xml')"
+    "# os.remove('tmp_new.xml')\n",
+    "# print(tmp_new_model.easy_verify(keep_tmp_file=True).untime_pattern)"
    ]
   },
   {
@@ -301,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
